--- a/CalculPolynome-backend/api-gateway/src/main/resources/application.yml
+++ b/CalculPolynome-backend/api-gateway/src/main/resources/application.yml
@@ -19,18 +19,27 @@ spring:
             allowedHeaders:
               - "*"
       routes:
-        - id: polynome-service
-          uri: http://localhost:8082
+        - id: factorization-service  # Identifiant unique pour la route
+          uri: lb://factorization-service  # Utilisation de Eureka pour découvrir le service Factorisation
           predicates:
-            - Path=/polynomes/**
-        - id: racine-service
-          uri: http://localhost:8083
+            - Path=/factoriser/**  # Redirige les requêtes sur ce chemin vers le service
+        # Route vers le service Roots
+        - id: roots-service  # Identifiant unique pour la route Roots
+          uri: lb://roots-service  # Utilisation d'Eureka pour découvrir le service Roots
           predicates:
-            - Path=/racines/**
-        - id: factorisation-service
-          uri: http://localhost:8084
+            - Path=/racines/**  # Redirige les requêtes /racines/** vers le service Roots
+        # Route vers le service Newton
+        - id: newton-service  # Identifiant unique pour la route Newton
+          uri: lb://newton-service  # Utilisation de Eureka pour découvrir le service Newton
           predicates:
-            - Path=/api/factorisation/**
+            - Path=/newton/**  # Redirige les requêtes /newton/** vers le service Newton
+        # Route vers le service Quadratique
+        - id: quadratic-service  # Identifiant unique pour la route Quadratique
+          uri: lb://quadratic-service  # Utilisation d'Eureka pour découvrir le service Quadratique
+          predicates:
+            - Path=/quadratique/**  # Redirige les requêtes /quadratique/** vers le service Quadratique
+
+
 
 eureka:
   client:
